--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;300;400;500;600;700;800&display=swap');
+
 body {
   font-family: 'League Spartan', sans-serif;
   font-family: 'Poppins', sans-serif;
@@ -38,10 +40,10 @@ a {
   text-decoration: none;
 }
 
-/* .gallery-img {
+.gallery-img {
   width: 100%;
 }
 
 #gallery .row > * {
   padding: 0;
-} */
+}
